--- a/_config.yml
+++ b/_config.yml
@@ -11,24 +11,35 @@ locale                  :     #default["en-US"] format language-TERRITORY , e.g 
 title                   : Big Data Prognosis #default["repository_name"]
 title_separator         :     #default [" | "]
 subtitle                : Informatics in a Learning Health System #default [your-repository-tagline]  
-description             : TO BE MOMDIFIED Description #default [your-repository-tagline]
+description             : "Transforming Healthcare with Data: Exploring the Future of Informatics and Data Science in Medicine." #default [your-repository-tagline]
 url                     :     #See baseurl - On Github Pages you may leave it blank - If you use CNAME use your domain
 baseurl                 :     #On Github Pages you may leave it blank. Have a look to: https://byparker.com/blog/2014/clearing-up-confusion-around-baseurl/
 words_per_minute        :     #default[200]
 timezone                :  America/New_York #"Europe/Madrid ,see https://jekyllrb.com/docs/configuration/options/ and https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # SEO
-og_image                :     #default[author.avatar (see below)] or [github-avatar]
-twitter_site            :     #Avoid @
+og_image                :  /assets/img/avatar.jpeg   #default[author.avatar (see below)] or [github-avatar]
+twitter_site            :  SajjadAbedian1 #Avoid @
 author:
   name                  :  Sajjad Abedian   # Name Surname Company
-  avatar                :     # Try a square file. Info: Your github avatar on https://github.com/[USERNAME].png
-  location              :  "New York, USA"   # New York, USA 
-#  links:                
-#    - url:  #A link or email: https://twitter.com/jack, mail@example.com
-#      icon: # A Fontawesome 5 code: fab fa-twitter - see https://fontawesome.com/
-#    - url:  # Another link
-#      icon: # Anothet FontAwesome code
+  avatar                :  /assets/img/avatar.jpeg   # Try a square file. Info: Your github avatar on https://github.com/[USERNAME].png
+  location              :  "New York, USA"   # New York, USA
+  links:
+    - label: "Medium"
+      icon: "fa-brands fa-medium"
+      url: https://medium.com/@saa3011
+    - label: "Linkedin"
+      icon: "fa-brands fa-linkedin"
+      url: https://linkedin.com/sajjadabedian
+    - label: "Github"
+      icon: "fa-brands fa-github"
+      url: https://github.com/SajjadAbedian
+    - label: "Twitter"
+      icon: "fa-brands fa-twitter"
+      url: https://twitter.com/SajjadAbedian1
+    - label: "Email"
+      icon: "fa-solid fa-envelope"
+      url: sajjad.abedian@gmail.com
 
 fa_version: #default ["6"] Use 6 or 5
 fa_kit_code: # Your FontAwesome kit code. If not provided a free hosted version (slower) will be loaded:  https://fontawesome.com/ 
@@ -36,8 +47,8 @@ fa_v4_support: #Bool Add FontAwesome 4 support
 # Web tracking - Google services https://analytics.google.com/analytics/web/
 # gtag_id is the preferred option, see https://developers.google.com/analytics/devguides/collection/gtagjs/migration?hl=en
 # analytics provided for backwards compatibility
-gtag_id                 :  
-analytics_id            :  
+gtag_id                 : G-CGX6Q43TCC
+analytics_id            : G-CGX6Q43TCC
 
 # Search providers
 # Available free search engines:
@@ -90,7 +101,7 @@ comments:
 #   "brand" options would be set on the left side of your navbar
 #   "nav" would be set on the right side. Two-level nav links available
 navbar:
-  style     :  #default is the classical top navbar, set "fab" for a floating action button navbar or "dual"
+  style     :  fab #default is the classical top navbar, set "fab" for a floating action button navbar or "dual"
   expand    :  # At which device size expand the navbar menu. default[md] https://getbootstrap.com/docs/4.5/layout/overview/
   brand:
     title   :  Home # Title in navbar
@@ -111,22 +122,25 @@ navbar:
         url   : /archive
       - title : Current skin
         url   : /current-skin
-  - title   : Docs
-    url     : https://dieghernan.github.io/chulapa/docs/01-install
-  - title   : Use this template
-    url     : https://github.com/dieghernan/chulapa-101/generate
-#  - title   : # Label submenu
-#    child:		
-#    - title: # Child label		
-#      url  : # child url	
-#    - title: # Child label		
-#      url  : # child url	
+        
 #Social links to be placed on your site footer
 footer:
   links:
-    - label : Repo on Github # Label
-      icon  : fab fa-github # Fontawesome 5 icon
-      url   : https://github.com/dieghernan/chulapa-101 # A link or email: https://twitter.com/jack, mail@example.com
+    - label: "Medium"
+      icon: "fa-brands fa-medium"
+      url: https://medium.com/@saa3011
+    - label: "Linkedin"
+      icon: "fa-brands fa-linkedin"
+      url: https://linkedin.com/sajjadabedian
+    - label: "Github"
+      icon: "fa-brands fa-github"
+      url: https://github.com/SajjadAbedian
+    - label: "Twitter"
+      icon: "fa-brands fa-twitter"
+      url: https://twitter.com/SajjadAbedian1
+    - label: "Email"
+      icon: "fa-solid fa-envelope"
+      url: sajjad.abedian@gmail.com
     - label: "RSS"
       icon: "fa fa-rss"
       url:  "./atom.xml"
@@ -140,10 +154,10 @@ googlefonts:
 # Theme and colors
 chulapa-skin: 
   highlight     :  dracula # default["default"]
-  skin          :  sunset # Optional predefined skins
+  skin          :  twitter # Optional predefined skins
   autothemer    :  true # Bool: Use autotheming
-  vars          :    
-    primary     : lightskyblue #default ["#007bff"] - Bootstrap blue
+  # vars          :    
+  #   primary     : lightskyblue #default ["#007bff"] - Bootstrap blue
     
 # D. Jekyll Defaults and collections: see https://jekyllrb.com/
 
