--- a/_config.yml
+++ b/_config.yml
@@ -149,12 +149,12 @@ footer:
 # C. Theme Settings
 # Google Fonts https://fonts.google.com/, add as many as you need
 googlefonts:
- # - url : # 'https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap'
+  - url :  'https://fonts.googleapis.com/css2?family=Playfair+Display:wght@100;300;400;500;700;900&display=swap'
 
 # Theme and colors
 chulapa-skin: 
   highlight     :  dracula # default["default"]
-  skin          :  twitter # Optional predefined skins
+  skin          :  academia # Optional predefined skins
   autothemer    :  true # Bool: Use autotheming
   # vars          :    
   #   primary     : lightskyblue #default ["#007bff"] - Bootstrap blue
